--- a/ui/dbesg.ui
+++ b/ui/dbesg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
+    <width>370</width>
     <height>471</height>
    </rect>
   </property>
@@ -199,7 +199,7 @@
    <widget class="QPushButton" name="btn_run">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>200</x>
       <y>180</y>
       <width>75</width>
       <height>23</height>
@@ -209,20 +209,10 @@
      <string>실행</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="log">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>230</y>
-      <width>261</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_save">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>290</x>
       <y>180</y>
       <width>75</width>
       <height>23</height>
@@ -235,7 +225,7 @@
    <widget class="QPushButton" name="btn_crawling">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>20</x>
       <y>180</y>
       <width>75</width>
       <height>23</height>
@@ -245,13 +235,36 @@
      <string>데이터수집</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btn_loadfile">
+    <property name="geometry">
+     <rect>
+      <x>106</x>
+      <y>180</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>파일불러오기</string>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="data">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>351</width>
+      <height>211</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>304</width>
+     <width>370</width>
      <height>21</height>
     </rect>
    </property>
