--- a/ui/dbesg.ui
+++ b/ui/dbesg.ui
@@ -27,19 +27,6 @@
      <string>LTFR</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="ltfr">
-    <property name="geometry">
-     <rect>
-      <x>75</x>
-      <y>30</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>5.2</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
@@ -118,84 +105,6 @@
      <string>30년</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="yr1">
-    <property name="geometry">
-     <rect>
-      <x>74</x>
-      <y>72</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.301</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="yr3">
-    <property name="geometry">
-     <rect>
-      <x>74</x>
-      <y>102</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.325</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="yr5">
-    <property name="geometry">
-     <rect>
-      <x>74</x>
-      <y>131</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.415</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="yr20">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>101</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.625</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="yr10">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>71</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.600</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="yr30">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>130</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>1.604</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_run">
     <property name="geometry">
      <rect>
@@ -212,7 +121,7 @@
    <widget class="QPushButton" name="btn_save">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>289</x>
       <y>180</y>
       <width>75</width>
       <height>23</height>
@@ -258,13 +167,169 @@
      </rect>
     </property>
    </widget>
+   <widget class="QComboBox" name="model">
+    <property name="geometry">
+     <rect>
+      <x>262</x>
+      <y>30</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>30</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>모델</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr1">
+    <property name="geometry">
+     <rect>
+      <x>75</x>
+      <y>70</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>0.741000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr3">
+    <property name="geometry">
+     <rect>
+      <x>75</x>
+      <y>100</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>0.976000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr30">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>130</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>1.823000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr20">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>100</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>1.824000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr10">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>70</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>1.713000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="yr5">
+    <property name="geometry">
+     <rect>
+      <x>75</x>
+      <y>130</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.010000000000000</double>
+    </property>
+    <property name="value">
+     <double>1.335000000000000</double>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="ltfr">
+    <property name="geometry">
+     <rect>
+      <x>75</x>
+      <y>27</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>3</number>
+    </property>
+    <property name="singleStep">
+     <double>0.001000000000000</double>
+    </property>
+    <property name="value">
+     <double>5.200000000000000</double>
+    </property>
+   </widget>
    <widget class="QLabel" name="img_spot">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>10</y>
-      <width>411</width>
-      <height>411</height>
+      <x>370</x>
+      <y>0</y>
+      <width>431</width>
+      <height>421</height>
      </rect>
     </property>
     <property name="text">
