--- a/ui/dbesg.ui
+++ b/ui/dbesg.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>38</x>
-      <y>30</y>
+      <y>27</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>74</y>
+      <y>64</y>
       <width>21</width>
       <height>16</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>104</y>
+      <y>94</y>
       <width>21</width>
       <height>16</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>132</y>
+      <y>122</y>
       <width>21</width>
       <height>16</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>72</y>
+      <y>62</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>102</y>
+      <y>92</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>132</y>
+      <y>122</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -108,8 +108,8 @@
    <widget class="QPushButton" name="btn_run">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>180</y>
+      <x>194</x>
+      <y>152</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -121,8 +121,8 @@
    <widget class="QPushButton" name="btn_save">
     <property name="geometry">
      <rect>
-      <x>289</x>
-      <y>180</y>
+      <x>283</x>
+      <y>152</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -134,8 +134,8 @@
    <widget class="QPushButton" name="btn_crawling">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>180</y>
+      <x>14</x>
+      <y>152</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -147,8 +147,8 @@
    <widget class="QPushButton" name="btn_loadfile">
     <property name="geometry">
      <rect>
-      <x>106</x>
-      <y>180</y>
+      <x>100</x>
+      <y>152</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -170,8 +170,8 @@
    <widget class="QComboBox" name="model">
     <property name="geometry">
      <rect>
-      <x>262</x>
-      <y>30</y>
+      <x>257</x>
+      <y>25</y>
       <width>101</width>
       <height>22</height>
      </rect>
@@ -180,8 +180,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>30</y>
+      <x>225</x>
+      <y>28</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -194,7 +194,7 @@
     <property name="geometry">
      <rect>
       <x>75</x>
-      <y>70</y>
+      <y>60</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -213,7 +213,7 @@
     <property name="geometry">
      <rect>
       <x>75</x>
-      <y>100</y>
+      <y>90</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -232,7 +232,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>130</y>
+      <y>120</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -251,7 +251,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>100</y>
+      <y>90</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -270,7 +270,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>70</y>
+      <y>60</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -289,7 +289,7 @@
     <property name="geometry">
      <rect>
       <x>75</x>
-      <y>130</y>
+      <y>120</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -305,10 +305,13 @@
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="ltfr">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>75</x>
-      <y>27</y>
+      <y>24</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -334,6 +337,104 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>182</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>기준일자</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>182</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>~</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="start_date">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>179</y>
+      <width>110</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="date">
+     <date>
+      <year>2015</year>
+      <month>12</month>
+      <day>31</day>
+     </date>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="end_date">
+    <property name="geometry">
+     <rect>
+      <x>242</x>
+      <y>179</y>
+      <width>110</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="date">
+     <date>
+      <year>2020</year>
+      <month>12</month>
+      <day>31</day>
+     </date>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>60</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>허용치</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="tol">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>60</y>
+      <width>62</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>0</number>
+    </property>
+    <property name="minimum">
+     <double>1000.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>150000.000000000000000</double>
+    </property>
+    <property name="singleStep">
+     <double>1000.000000000000000</double>
+    </property>
+    <property name="value">
+     <double>100000.000000000000000</double>
     </property>
    </widget>
   </widget>
